--- a/app/index.html
+++ b/app/index.html
@@ -25,8 +25,8 @@
     <div ng-include="'views/header.html'"></div>
 
     <div class="container" ng-cloak>
-    <div ui-view=""></div>
     <div ng-include="'views/alert.html'" ></div>
+    <div ui-view=""></div>
     </div>
 
 <!--     <div class="footer">
@@ -73,6 +73,9 @@
         <script src="scripts/directives/validateequals.js"></script>
         <script src="scripts/services/alert.js"></script>
         <script src="scripts/services/authtoken.js"></script>
+        <script src="scripts/controllers/logout.js"></script>
+        <script src="scripts/controllers/statusupdate.js"></script>
+        <script src="scripts/services/authinterceptor.js"></script>
         <!-- endbuild -->
 </body>
 </html>
