--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,8 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-moment/angular-moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -78,6 +80,7 @@
         <script src="scripts/services/authinterceptor.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/services/auth.js"></script>
+        <script src="scripts/services/statusupdate.js"></script>
         <!-- endbuild -->
 </body>
 </html>
